# otl_diff_drive

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  setup.py
nodes/: base_node.py  base_odom.py  unit_base_node.py  velocity_filter.py
src/otl_diff_drive/: dynamixel.py  odometry.py  twist_velocities.py  unit_odometry.py  unit_twist_velocities.py
